selfhost/test/typechecker/binary/eq_error.2.out
Error at %FILE_NAME%:1:8
Type mismatch
  |  123 == None
            ^
Expected: Int
but instead found: <unknown>?
